Added Disqus comments to the blog. Comments are not allowed on About pages.

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,11 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+# Disqus Comments
+disqus:
+  # Leave shortname blank to disable comments site-wide.
+  # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+  shortname: manuelmc
 
 # Exclude from processing.
 # The following items will not be processed, by default.
