Adding emoji support and x86_64-darwin-21 platform.

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jemoji
 # Disqus Comments
 disqus:
   # Leave shortname blank to disable comments site-wide.
